[gd_scene load_steps=6 format=3 uid="uid://b7ktwjwqesvxy"]

[ext_resource type="Script" path="res://ui/windows/roles/roles_table.gd" id="1_5rolm"]
[ext_resource type="PackedScene" uid="uid://dfpfo0ddyv1nt" path="res://ui/windows/roles/role_row.tscn" id="2_0fhjn"]
[ext_resource type="Theme" uid="uid://djuo54pavaq3o" path="res://Themes/Right_menu/Right_main.tres" id="2_pssva"]
[ext_resource type="Theme" uid="uid://ckkpkqulicu7v" path="res://Themes/Info/title.tres" id="3_kp1sc"]
[ext_resource type="Theme" uid="uid://b3rhwjl7yw6lu" path="res://Themes/Info/Info_main.tres" id="4_qiahc"]

[node name="Roles Table" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rolm")
role_row_template = ExtResource("2_0fhjn")

[node name="Table" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="Table"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_pssva")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 80.0
theme = ExtResource("3_kp1sc")

[node name="Space" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("4_qiahc")

[node name="Icon" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
theme = ExtResource("3_kp1sc")
text = "ИКОНКА"
horizontal_alignment = 1

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Icon"]
layout_mode = 0
offset_top = 21.0
offset_right = 27.0
offset_bottom = 67.0
theme = ExtResource("4_qiahc")

[node name="Space2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("4_qiahc")

[node name="Split0" type="HSplitContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_qiahc")

[node name="Name" type="HFlowContainer" parent="HBoxContainer/Split0"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = ExtResource("4_qiahc")

[node name="Name" type="Label" parent="HBoxContainer/Split0/Name"]
custom_minimum_size = Vector2(260, 51)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_kp1sc")
text = "НАЗВАНИЕ РОЛИ"
vertical_alignment = 2

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Split0/Name/Name"]
layout_mode = 0
offset_left = -30.0
offset_top = 51.0
offset_right = -10.0
offset_bottom = 96.0
theme = ExtResource("4_qiahc")

[node name="Connection2" type="PanelContainer" parent="HBoxContainer/Split0/Name/Name"]
layout_mode = 0
offset_left = -30.0
offset_top = 49.0
offset_bottom = 51.0
theme = ExtResource("4_qiahc")

[node name="Split1" type="HSplitContainer" parent="HBoxContainer/Split0"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_qiahc")

[node name="Rights" type="HFlowContainer" parent="HBoxContainer/Split0/Split1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("4_qiahc")

[node name="Rights" type="Label" parent="HBoxContainer/Split0/Split1/Rights"]
custom_minimum_size = Vector2(150, 51)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_kp1sc")
text = "ПРАВА РОЛИ"
vertical_alignment = 2

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Rights/Rights"]
layout_mode = 0
offset_left = -30.0
offset_top = 51.0
offset_right = -10.0
offset_bottom = 96.0
theme = ExtResource("4_qiahc")

[node name="Connection2" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Rights/Rights"]
layout_mode = 0
offset_left = -30.0
offset_top = 49.0
offset_bottom = 51.0
theme = ExtResource("4_qiahc")

[connection signal="sort_children" from="HBoxContainer/Split0" to="." method="_on_split_0_sort_children"]
[connection signal="sort_children" from="HBoxContainer/Split0/Split1" to="." method="_on_split_0_sort_children"]
